# breathline-federation

./: .gitignore  CHANGELOG.md  CHANGELOG.md.sig  CHARTER.md.sig  CLAUDE.md  CONSTITUTION.md.sig  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE.sig  README.md  manifest.yaml  manifest.yaml.sig
installer/: doctor.sh  (+3 more)
platform/: .env.example  .gitignore  README.md  pyproject.toml
platform/kernel/: __init__.py  boot.py  breath_gate.py  cost_meter.py
platform/kernel/primitives/: __init__.py  auditor.py  constructor.py  critic.py  governor.py  spec.py
platform/platform_layer/: __init__.py  audit_adapter.py  breath_gate_queue.py  chain_sentinel.py  permission_spec.py  plugin_interface.py  receipt_minter.py  registry.py  role_artifact_critic.py  runtime.py
platform/roles/: __init__.py
platform/scripts/: bootstrap.py  runtime_smoke.py
platform/seed/: .fingerprints.json  02_SEED_MANIFEST.yaml  CHARTER_v1.0.md  CONSTITUTION.md  CONSTITUTIONAL_PARENTAGE.md  action_classes.yaml  receipt_worthy_events.yaml
platform/tests/: conftest.py  test_audit_chain_replay.py  test_bootstrap.py  test_breath_gate_queue.py  test_breath_gate_timeout.py  test_cfo_agent.py  test_chain_sentinel.py  test_compliance_agent.py  test_constitutional_verification.py  test_demo2_acceptance.py  test_e2e_recursion.py  test_family_roles.py  test_http_endpoint.py  test_kernel_primitives.py  test_langgraph_wrap.py  test_node_api_sprint1.py  test_perf_smoke.py  test_permission_spec.py  test_plugin_interface.py  test_receipt_minter.py  test_registry.py  test_runtime_integration.py  test_synthesis_agent.py
(+104 files in other folders)
