[project]
name = "breathline-agentic-platform"
version = "0.1.0"
description = "Recursive Agentic Platform — Demo 2 (Layers 0-3) — implements the agentic_platform_seed/IMPLEMENTATION_PLAN.md v0.1"
authors = [{ name = "Kenneth Mangum" }]
license = { text = "Constitutional Framework — Human Sovereignty Preserved" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.2,<0.3",
    "langsmith>=0.1,<0.3",
    "fastapi>=0.115,<0.120",
    "uvicorn>=0.30,<0.35",
    "pydantic>=2.6,<3.0",
    "anthropic>=0.30,<0.50",
    "openai>=1.40,<2.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<0.30",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
bootstrap = "scripts.bootstrap:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*", "platform*", "roles*", "scripts*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
